2009-03-26  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#106387 - Add contact option is displayed in desktop menu
	even there are no contacts to add

	* src/hd-hildon-home-dbus.c (select_contacts_button,
	  CONTACT_DBUS_CAN_ADD_SHORTCUT, model_row_deleted_cb,
	  can_add_shortcut_notify, hd_hildon_home_dbus_show_edit_menu): Call
	  can_add_shortcut to check if there is a contact to add.

2009-03-26  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#107622 - hildon-home crash trying to open a NULL URL.

	* src/hd-bookmark-shortcut.c (hd_bookmark_shortcut_update_from_gconf,
	  hd_bookmark_shortcut_activate_service): Fix hildon-home crash.

2009-03-26  Adam Endrodi <ext-adam.endrodi@nokia.com>

	* src/hd-incoming-event-window.c:
	  Communicate the event time and message in the X Window properties.
	  The WM will need to know about them because it will need to layout
	  the notification window (thumbnail) entirely on its own.
	* src/test-incoming-event.c:
	  Add longer message text.

2009-03-24  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#107329 - Opening account from grouped mail notifications
	broken.

	* src/hd-incoming-events.c (group_activate_notifications): Create a
	DBus Message to call.

	* src/hd-notification-manager.c
	  (hd_notification_manager_call_message):
	* src/hd-notification-manager.h: Add function to call a DBusMessage.

	* debian/changelog: Update

2009-03-23  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Released 0.3.18
	* configure.ac: 0.3.18

2009-03-10  Adam Endrodi <ext-adam.endrodi@nokia.com>

	NB#95670 PLayed games are not going to pause state ,when
	         sms / message is received

	* src/hd-incoming-event-window.c:
	  Don't accept focus.
	* src/test-incoming-event.c:
	  Make it able to create previews and not previews.

2009-03-20  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#105850 - Implementing fallback for background images.

	* src/hd-backgrounds.c (get_background_for_view_from_theme,